<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.minor.StatisticsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/statisticsTitle"
        android:textSize="60sp"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:id="@+id/stats_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/today_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statisticsTodaySteps"
            android:textSize="18sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/today_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/today_label"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/today_steps"
            android:layout_marginTop="32dp"
            android:text="@string/statisticsTotalSteps"
            android:textSize="18sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/total_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_label"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statisticsExit" />

</RelativeLayout>
